# rusti-masti

./: .containerignore  Containerfile  Containerfile.app  Containerfile.blitzffi  DESIGN.md  LICENSE  README.md  docker-entry.sh  micronaut-cli.yml  oom  pom.xml  run.sh
loadtest/: post-receipt.lua
render-ffi/: Cargo.toml
render-ffi/src/: lib.rs
src/main/java/com/example/render/: BlitzConfig.java  BlitzLibPresent.java  BlitzRenderer.java  BlitzRendererFactory.java  InvalidRequestException.java  JavaFxPlatform.java  PayloadValidator.java  RejectedRenderException.java  RenderController.java  RenderDispatcher.java  RenderException.java  RenderService.java  RenderSpec.java  SizeProfile.java  TemplateService.java  WebViewCell.java
src/main/resources/: application.properties  sample-receipt.json
src/main/resources/templates/: receipt-fragment.html  receipt-large.html  receipt-medium.html  receipt-shell.html  receipt-small.html  receipt-xlarge.html  receipt.html
src/test/java/com/example/: ImageTest.java
src/test/java/com/example/render/: BlitzRendererTest.java  PayloadValidatorTest.java  SizeTemplateTest.java  TemplateServiceTest.java
